2010-02-23	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Fixed bug:
	  #2912644 Black rain
	  Rain drops/snow flakes/magic sparkle now use shape 0 from sprites.vga.
	  Rain drops are frames 3 to 7 (7 being a "splash" frame of sorts which
	  looks very nice), snow flakes are frames 13 to 20 and magic sparkle are
	  frames 21 to 27.
	* Applied patch:
	  #2957036 Fix a sfx and fix blacksmith to show tongs and hammer

2010-02-22	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Fixed bugs:
	  #2819210 newfilegump.cc (4 buttons one pixel too far to the right)
	  #2838846 Text background button sticks out 20 pixels
	* gamemgr/modmgr.cc: Removed some redundant variables. Patch dir now behaves
	  identically to mods dir as far as default paths go.

2010-02-22 Dominik Reichardt <dominus@users.sourceforge.net>
	* win32/exult_studio_installer.iss: set to SVN and setting working folder for Exult Studio start menu item

2010-02-22	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Fixed absolute path issue in Windows.
	* Setting a relative <mods> path did not work as expected; fixed.

2010-02-20	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Fixed bug #2844723.

2010-02-20	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* exult.cc, Makefile.*, conf/*, files/*, gamemgr/*, mapedit/*: In Windows,
	  Exult and ES will now use/save configuration files, savegames, gamedat,
	  patches, screenshots and stdout.txt/stderr.txt in LOCAL_APPDATA\Exult.
	  This has the added benefit of no longer requiring ES to be installed to
	  the same path as Exult. Existing configuration files (including Exult.cfg)
	  will be copied from the current path to the new location and ignored from
	  then on; savegames, mod data and everything else will not. This should
	  make Exult play nice with Vista and W7, but I need testers.
	  NOTE: If you want to keep Exult as "portable" in Win32 as it was, you can
	  compile it with -DPORTABLE_EXULT_WIN32 and set all relevant paths directly